[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wurbo = { path = "crates/wurbo" }
minijinja = { version = "1.0.10", features = ["builtins", "json"] }

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Enable Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
