[package]
name = "forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.5.0"
wurbo = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:forms"

[package.metadata.component.dependencies]
