[package]
name = "wurbo"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A timy framework for WebAssembly Component model front-ends"
homepage = "https://github.com/DougAnderson444/blastkids"
documentation = "https://docs.rs/wurbo"
repository = "https://github.com/DougAnderson444/wurbo"
readme = "README.md"
keywords = ["WebAssembly"]
authors = ["Doug Anderson <DougAnderson444@peerpiper.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nanoid = "0.4.0"
thiserror = "1.0"
minijinja = { version = "1.0.11", features = ["json"] }
serde = { version = "1.0.130" }
serde_json = "1.0.68"

pest = "2.6"
pest_derive = "2.6"

wit-parser = "0.13.1"
