[package]
name = "wurbo"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A timy framework for WebAssembly Component model front-ends"
homepage = "https://github.com/DougAnderson444/blastkids"
documentation = "https://docs.rs/wurbo"
repository = "https://github.com/DougAnderson444/wurbo"
readme = "README.md"
keywords = ["WebAssembly"]
authors = ["Doug Anderson <DougAnderson444@peerpiper.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nanoid = "0.4.0"
thiserror = "1.0"
minijinja = { version = "2.0.2", features = ["json", "loader"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.112" }
base64ct = { version = "1.6.0", features = ["alloc"] }

convert_case = "0.6.0"
