[package]
name = "forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.23.0"
wurbo = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "demo:forms"

# It's not documented, but you can use `package.metadata.component.bindings` to
# set additional derive attributes for the generated bindings:
[package.metadata.component.bindings]
derives = []

[package.metadata.component.dependencies]
