[package]
name = "vowels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.23.0"
render = "0.3.1"
wurbo = { workspace = true }
nanoid = "0.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:vowels"

[package.metadata.component.dependencies]
